Bug 958963 - Headset status from input device didn't be recorded by GonkSwitch. r=dhylands, a=1.3+