hal/fallback/FallbackSwitch.cpp
@@ -25,5 +25,10 @@ GetCurrentSwitchState(SwitchDevice aDevice) {
   return SWITCH_STATE_UNKNOWN;
 }
 
+void
+NotifySwitchStateFromInputDevice(SwitchDevice aDevice, SwitchState aState)
+{
+}
+
 } // namespace hal_impl
 } // namespace mozilla
