widget/gonk/nsAppShell.cpp
@@ -263,7 +263,8 @@ public:
 
     NS_IMETHOD Run()
     {
-        hal::NotifySwitchChange(mEvent);
+        hal::NotifySwitchStateFromInputDevice(mEvent.device(),
+          mEvent.status());
         return NS_OK;
     }
 private:
